hub/cluster/monitoring/karma.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: karma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karma
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: karma
              topologyKey: kubernetes.io/hostname
      containers:
        - name: karma
          image: ghcr.io/prymitive/karma:v0.122
          args:
            - --config.file=/etc/karma/karma.yaml
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/karma
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      volumes:
        - name: config
          configMap:
            name: karma

---
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: karma
  ports:
    - name: http
      port: 80
      targetPort: http
