hub/cluster/monitoring/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: grafana.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: grafana.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.hub.samcday.com
  parentRefs:
    - name: grafana
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: alertmanager.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: alertmanager.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hostnames:
    - alertmanager.hub.samcday.com
  parentRefs:
    - name: alertmanager
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: prometheus.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: prometheus.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hostnames:
    - prometheus.hub.samcday.com
  parentRefs:
    - name: prometheus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: karma
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: karma.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: karma.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: karma-certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karma
  namespace: monitoring
spec:
  hostnames:
    - karma.hub.samcday.com
  parentRefs:
    - name: karma
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: karma
          port: 80
